# clkPoC

./: .gitignore  pyproject.toml  pyrightconfig.json  requirements.txt
aux/: armTadd.py  config_schema.py  fitKv.py  manualTune.py  stateMachineSketch.py  ts_types.py  valueController.py
docs/: AGENTS.md  STATUS.md
docs/context/: AI.md  ARCHITECTURE.md  EVENTS.md  HARDWARE.md  NOMENCLATURE.md  STYLE.md  TODO.md
src/: clkTypes.py  config_schema.py  f9t.py  gpsdo_main.py  main.py  quietDog.py  quietWatch.py  schemaExample.sql  stateMachineSketch.py  tic.py
src/clkpoc/: TADD.py  __main__.py  armTadd.py  clkTypes.py  dfPpsCsvLog.py  dsc.py  f9t.py  main.py  phaseAligner.py  phaseStep.py  phaseWatch.py  publisher.py  quietWatch.py  rollingMean.py  serialAsyncioShim.py  state.py  stepWatch.py  tic.py  topicPublisher.py  tsTypes.py  ts_types.py  tsn.py
src/clkpoc/dev/: manualTune.py  valueController.py
src/clkpoc/df/: pairPps.py  pairQerr.py  phaseTrack.py  ppsCsvLog.py
tests/: testIso8601.py  testTs.py  testTsArith.py  testTsFormat.py  testTsn.py  testTsnArith.py  testTsnFormat.py
typings/pynmeagps/: __init__.pyi
typings/pyubx2/: __init__.pyi
typings/serial_asyncio/: __init__.pyi
